# json-to-sql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README1.md  README2.md  UAQ_SPEC.md  task.md  test_array.rs  test_ffi.py  test_prefix  test_prefix.rs  test_two_inputs.rs
src/: api.rs  format.rs  generator.rs  guard.rs  info.rs  lib.rs  models.rs  operation.rs  parser.rs
src/generator/: condition.rs  mod.rs  processor.rs  relation.rs
src/guard/: formatter.rs  mod.rs  threats.rs  validator.rs
tests/: exact_test.rs  integration_tests.rs  manual_test.rs  repro_mixed.rs  repro_strict.rs
